# reversi

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ai.cpp  ai.h  aitrainer.cpp  aitrainer.h  board.cpp  board.h  game.cpp  game.h  main.cpp  window.cpp  window.h
src/nnet/: nnet.cpp  nnet.h
test/: CMakeLists.txt  boardtest.cpp  gametest.cpp
